tests/Aspire.Hosting.Kubernetes.Tests/Snapshots/KubernetesIngressTests.AddIngress_WithHostname_AppliesToHostlessPath.verified.yaml
---
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "public"
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: "myapi-service"
                port:
                  name: "http"
            pathType: "Prefix"
            path: "/api"
      host: "api.example.com"
    - http:
        paths:
          - backend:
              service:
                name: "myapi-service"
                port:
                  name: "http"
            pathType: "Prefix"
            path: "/api"
      host: "www.example.com"
